# MeshToImageData_master

./: CMakeLists.txt  MeshToImageData.cpp  README.md  Readme.txt
testData/: Genus3.vtp
